# ukrainian-word-stress

./: .gitignore  LICENSE  README.md  justfile  pyproject.toml  requirements.txt  setup.py
docs/: benchmark.md  dictionary_format.md  evaluation.md  stats.txt
scripts/: compute_coverage.py  prepare_ambiguity_corpus.py
tests/: benchmark.py  test_compile_dict.py  test_stressify.py
ukrainian_stress/: __init__.py  cli.py  compile_dict.py  mutable_text.py  stressify.py  tags.py
ukrainian_word_stress/: __init__.py  cli.py  compile_dict.py  stressify.py  stressify_.py  tags.py
